<resources>
    <string name="app_name">ScorePal</string>
    <string name="bt_connect">Connect</string>
    <string name="bt_not_connected">no device connected</string>
    <string name="title_activity_bt_connect">Connect Device</string>
    <string name="stored_device">-</string>
    <string name="bt_scan">Scan</string>
    <string name="bt_status_text">Bluetooth not enabled</string>
    <string name="bt_status_on_text">Bluetooth enabled: select scorepal</string>
    <string name="bt_checked">On</string>
    <string name="bt_status_off">Off</string>
    <string name="bt_scorepal_device_title">hc-05</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="sets">Sets</string>
    <string name="games">Games</string>
    <string name="previous_sets">Previous Sets</string>
    <string name="undo">Undo</string>
    <string name="reset">New Match</string>
    <string name="wins">Wins</string>
    <string name="device">Device</string>
    <string name="account">Account</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="stored_playerone_title">player_one_title</string>
    <string name="stored_playertwo_title">player_two_title</string>
    <string name="sync">Sync</string>
    <string name="title_activity_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="vs">Vs</string>
    <string name="warning">Warning</string>
    <string name="sure_to_delete">Are you sure to delete this match?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="points">Points</string>
    <string name="successful_save">Successfully saved...</string>
    <string name="total_points">Total Points</string>
    <string name="played_wimbledon3">A 3 set match of ITF scored tennis</string>
    <string name="played_wimbledon5">A 5 set match of ITF scored tennis</string>
    <string name="played_badminton3">A 3 game match of badminton</string>
    <string name="played_badminton5">A 5 game match of badminton</string>
    <string name="played_points">Played a straight game of points</string>
    <string name="game_not_completed">Didn\'t finish</string>
    <string name="won">won</string>
    <string name="send_to_device">Send to device >></string>
    <string name="failed_to_send_history_file">Failed to send game data to device</string>
    <string name="game_points">Game Points</string>
    <string name="title_activity_history_description">HistoryDescriptionActivity</string>
    <string name="failed_to_connect">Failed to connect to device...</string>
    <string name="connecting">Connecting Scorepal Device</string>
    <string name="please_wait_connecting">Please wait while connecting to the ScorePal device...</string>
    <string name="sure_to_reset">Are you sure you want to reset this match?</string>
    <string name="unsuccessful_reset">Sorry, failed to send the reset command. Check bluetooth connection...</string>
    <string name="played_fast_four">A match of ITF Fast 4</string>
    <string name="previous_games">Previous Games</string>
    <string name="played">Played</string>
    <string name="sfor">for</string>
    <string name="title_activity_score">Device Scoring</string>
    <string name="score">Score</string>
    <string name="signin_failed">Please sign in to access all features</string>
    <string name="score_device">Score Device</string>
    <string name="score_manual">Score Manual</string>
    <string name="title_activity_navigation">ScorePal Options</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_account">Account</string>
    <string name="failed_google_signin">Failed to signin to Google, please try again</string>
    <string name="failed_firebase_signin">Failed to signin to Firebase, please try again</string>
    <string name="title_activity_match_details">Match Details</string>
    <string name="error_user_not_signedin">Sorry you are not signed in, please go to account before saving.</string>
    <string name="no_match_loaded">No Match Loaded</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="need_location_permission">In order to discover nearby bluetooth devices we need to have permission to access your location.</string>
</resources>
