<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="0dp"
    android:paddingBottom="8dp"
    tools:context=".fragments.ScorePreviousSetsFragment">

    <TextView
        android:id="@+id/previous_sets_text"
        style="@style/ScoreInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/previous_sets"
        app:layout_constraintLeft_toRightOf="@+id/sets_text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/sets_text"
        style="@style/ScoreInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sets"
        app:layout_constraintLeft_toRightOf="@+id/player_one_sets_label_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextSwitcher
        android:id="@+id/player_one_sets_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="4dp"
        android:text="00"
        app:layout_constraintLeft_toLeftOf="@+id/sets_text"
        app:layout_constraintTop_toBottomOf="@+id/sets_text"/>

    <TextSwitcher
        android:id="@+id/player_two_sets_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="00"
        app:layout_constraintLeft_toLeftOf="@+id/player_one_sets_text"
        app:layout_constraintTop_toBottomOf="@+id/player_one_sets_text" />

    <TextView
        android:id="@+id/player_one_sets_label_text"
        style="@style/PlayerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="5"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/player_one"
        app:layout_constraintTop_toTopOf="@+id/player_one_sets_text"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/player_two_sets_label_text"
        style="@style/PlayerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_one_sets_label_text"
        tools:text="@string/player_two" />

    <TextSwitcher
        android:id="@+id/player_one_set_one_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="0dp"
        android:text="00"
        app:layout_constraintLeft_toLeftOf="@+id/previous_sets_text"
        app:layout_constraintTop_toTopOf="@+id/player_one_sets_text" />

    <TextSwitcher
        android:id="@+id/player_one_set_two_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="00"
        app:layout_constraintLeft_toRightOf="@+id/player_one_set_one_text"
        app:layout_constraintTop_toTopOf="@+id/player_one_set_one_text" />

    <TextSwitcher
        android:id="@+id/player_one_set_three_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="00"
        app:layout_constraintLeft_toRightOf="@+id/player_two_set_two_text"
        app:layout_constraintTop_toTopOf="@+id/player_two_set_two_text" />

    <TextSwitcher
        android:id="@+id/player_one_set_four_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="00"
        app:layout_constraintLeft_toRightOf="@+id/player_two_set_three_text"
        app:layout_constraintTop_toTopOf="@+id/player_two_set_three_text" />

    <TextSwitcher
        android:id="@+id/player_two_set_one_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="0dp"
        android:text="00"
        app:layout_constraintLeft_toLeftOf="@+id/player_one_set_one_text"
        app:layout_constraintTop_toTopOf="@+id/player_two_sets_text" />

    <TextSwitcher
        android:id="@+id/player_two_set_two_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="00"
        app:layout_constraintLeft_toRightOf="@+id/player_two_set_one_text"
        app:layout_constraintTop_toTopOf="@+id/player_two_set_one_text" />

    <TextSwitcher
        android:id="@+id/player_two_set_three_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="00"
        app:layout_constraintLeft_toRightOf="@+id/player_one_set_two_text"
        app:layout_constraintTop_toTopOf="@+id/player_one_set_two_text" />

    <TextSwitcher
        android:id="@+id/player_two_set_four_text"
        style="@style/ScoreValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="00"
        app:layout_constraintLeft_toRightOf="@+id/player_one_set_three_text"
        app:layout_constraintTop_toTopOf="@+id/player_one_set_three_text" />

</android.support.constraint.ConstraintLayout>
